Add Wanted Items route
